--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
   </header>
 
   <main>
-    <div class="bg-blue-300 flex flex-col-reverse align-center justify-center p-10 m-auto md:max-w-4xl md:flex-row">
-      <div class="bg-green-500 w-full md:w-2/3 mr-24">
+    <div class="flex flex-col-reverse align-center justify-center p-10 m-auto md:max-w-4xl md:flex-row">
+      <div class="w-full md:w-2/3 mr-24">
         <h1 class="text-3xl font-bold mb-5 md:text-4xl">
           QR Code Generator
         </h1>
@@ -72,7 +72,7 @@
 
         </form>
       </div>
-      <div class="bg-green-300 w-full md:w-1/3 self-center">
+      <div class="w-full md:w-1/3 self-center">
         <img src="img/qr-code.svg" alt="" class="w-1/2 m-auto mb-10 md:w-full">
       </div>
     </div>
